some smaller changes

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "jquery": "2.1.4",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0",
-    "topojson": "https://github.com/mbostock/topojson.git#^1.6.26"
+    "topojson": "https://github.com/mbostock/topojson.git#^1.6.26",
+    "taggle": "^1.11.1",
+    "jquery-ui": "^1.12.1"
   }
 }
