--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,8 @@
     "taggle": "^1.11.1",
     "jquery-ui": "^1.12.1",
     "font-awesome": "~4.5.0"
+  },
+  "devDependencies": {
+    "nouislider": "^9.1.0"
   }
 }
